# experiments

./: .gitignore  README.md
azure-pipelines/: README.md  build-containers.yaml  sample-container-pipeline.yaml
cdktf/azure/storage-stack/: cdktf.json  main.py
docker/docker-image-terraform/: Dockerfile
docker/docker-image-terraform-poetry/: Dockerfile  pyproject.toml
docker/docker-image-tools/: Dockerfile  README.md
